làm tính năng sửa nhiều cho cho topicTour
